cluster/apps/networking-system/ingresses/base/immich/middleware-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/middleware_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: immich-strip-prefix
  labels:
    app.kubernetes.io/name: immich
spec:
  stripPrefix:
    prefixes:
      - /api
