cluster/apps/networking-system/ingresses/base/immich/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`photos.${SECRET_DOMAIN_0}`) && PathPrefix(`/`)
      middlewares:
        - name: secure-headers
      services:
        - name: immich-web
          port: 3000
          namespace: default
    - kind: Rule
      match: Host(`photos.${SECRET_DOMAIN_0}`) && PathPrefix(`/api`)
      middlewares:
        - name: secure-headers
        - name: immich-strip-prefix
      services:
        - name: immich-server
          port: 3001
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
